# Blas

./: CMakeLists.txt
etc/: blas.pc
etc/environment_modules/: module
